# django-dataintegrity

./: pyproject.toml  requirements-dev.txt  requirements.txt
docs/: AI.md
