[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-dataintegrity"
version = "0.1.0"
description = "Intégration Django pour la preuve d'intégrité : hash (blockchain) et signature."
readme = "README.md"
authors = [{ name = "Hicinformatic", email = "hicinformatic@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
  "django",
  "integrity",
  "proof",
  "hash",
  "blockchain",
  "signature",
  "verification",
  "django-fields",
  "python",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
]
dependencies = [
  "Django>=3.2",
  "dataintegrity",
  "django-namedid>=0.1.0",
  "django-boosted>=0.1.0",
  "django-providerkit>=0.1.0",
  "django-virtualqueryset>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-django>=4.5",
  "ruff>=0.5",
  "mypy>=1.0",
  "django-stubs>=5.0.0",
  "python-dotenv>=1.0",
]
lint = [
  "ruff>=0.5.0",
  "mypy>=1.0.0",
  "semgrep>=1.0.0",
  "pylint>=3.0.0",
]
quality = [
  "radon>=6.0.0",
  "vulture>=2.0.0",
  "autoflake>=2.0.0",
]
security = [
  "bandit>=1.7.0",
  "safety>=3.0.0",
  "pip-audit>=2.7.0",
  "semgrep>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/hicinformatic/django-dataintegrity"
Repository = "https://github.com/hicinformatic/django-dataintegrity"
Documentation = "https://github.com/hicinformatic/django-dataintegrity#readme"
Issues = "https://github.com/hicinformatic/django-dataintegrity/issues"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["djdataintegrity*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "dataintegrity.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "providerkit.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.ruff]
line-length = 100
target-version = "py310"
